--- a/src/components/Molecules/Footer/Footer.css
+++ b/src/components/Molecules/Footer/Footer.css
@@ -10,6 +10,13 @@
   justify-content: center;
   align-items: normal;
   align-content: normal;
+
+  width: 100%;
+  position: fixed;
+  left: 0;
+  bottom: 10px;
+  opacity: 0.6;
+  text-align: center;
 }
 
 .btnItem {
@@ -19,4 +26,22 @@
   flex-basis: auto;
   align-self: auto;
   order: 0;
+}
+
+@media (max-width: 645px) {
+  .footerContainer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: normal;
+    align-content: normal;
+
+    width: 100%;
+    position: fixed;
+    left: 0;
+    bottom: 2px;
+    opacity: 0.6;
+    text-align: center;
+  }
 }
