--- a/src/components/Molecules/Header/Header.css
+++ b/src/components/Molecules/Header/Header.css
@@ -1,3 +1,11 @@
+.header {
+  width: 100%;
+  position: fixed;
+  left: 0;
+  top: 30px;
+  text-align: center;
+}
+
 .headerContainer {
   background-color: #3d4b5d;
 }
@@ -20,6 +28,14 @@
   .headerTitle {
     font-size: 1.3rem;
     color: #ffffff;
-    padding: 2rem;
+    padding: 0.8rem;
+  }
+
+  .header {
+    width: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    text-align: center;
   }
 }
